added axios to api call

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <option value="CLP">Chilean Peso</option>
     </select>
 
-    <select name="fiat">
+    <select name="exchangeRate">
       <option value="USD">U.S. Dollars</option>
       <option value="AUD">Australian Dollar</option>
       <option value="BRL">Reais</option>
