needs to grab correct data

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <input type="text" name="amount" placeholder="quantity">
 
-    <select name="yourRate">
+    <select name="currency">
       <option value="USD">U.S. Dollars</option>
       <option value="AUD">Australian Dollar</option>
       <option value="BRL">Reais</option>
@@ -25,13 +25,9 @@
       <option value="CLP">Chilean Peso</option>
     </select>
 
-    <select name="exchangeRate">
-      <option value="USD">U.S. Dollars</option>
-      <option value="AUD">Australian Dollar</option>
-      <option value="BRL">Reais</option>
-      <option value="CAD">Canadian Dollar</option>
-      <option value="CHF">Swiss Franc</option>
-      <option value="CLP">Chilean Peso</option>
+    <select name="crypto">
+      <option value="BTC">Bitcoin</option>
+      <option value="ETH">Ethereum</option>
     </select>
 
     <button type="submit">Check</button>
