need to fix conversion formula

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ExxxChange</title>
+  <title>CrypExxxChange</title>
 </head>
 
 <body>
-  <h1>ExxxChange</h1>
-  <p>Check current exchange rates here</p>
+  <h1>CrypExxxChange</h1>
+  <p>Check current cryptocurrency exchange rates here</p>
 
   <form action="/" method="post">
 
